--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,3 +495,24 @@ header {
   background: none;
   border: none;
 }
+/* -------------------------Cart----------------------------------- */
+.cart{
+  width: 50%;
+  margin: auto;
+  text-align: center;
+  padding-top: 30px;
+}
+.cart h2{
+  margin-bottom: 20px;
+}
+.cart table {
+  width: 100%;
+
+}
+.cart table thead tr th:first-child{
+  text-align: left;
+}
+.cart table tr td{
+  border-bottom: 1px solid #ddd;
+  padding: 12px 0;
+}
