--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@
 html {
   font-size: 62.5%;
 }
+span{
+    font-weight: bold;
+}
 body {
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
@@ -62,6 +65,7 @@ header {
     display: block;
     padding: 18px 20px;
     text-decoration: none;
+    transition: transform 0.5s ease;
 }
 .menu__list ul.sub-menu {
     position: absolute;
@@ -74,6 +78,14 @@ header {
 }
 .menu__list li:hover>ul.sub-menu {
     display: block;
+}
+.menu__list  a:hover {
+    color: red;
+    transition: ease-out;
+}
+.other  i :hover {
+    color: red;
+    transition: ease-out;
 }
 .menu__list ul.sub-menu a {
     padding: 8px 15px;
@@ -172,10 +184,12 @@ header {
     cursor: pointer;
     border-radius: 1rem;
     margin-bottom: 10px;
+      transition: transform 0.5s ease;
   }
-.products-item img :hover{
-  transform: scale(0.9);
+.products-item__img:hover {
+    transform: scale(1.06);
 }
+
   .products-item__heading {
     font-size: 14px;
     line-height: 1.2em;
